<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019 Djalel Chefrour
  ~ This file is part of Zaid.
  ~
  ~ Zaid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Zaid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~  along with Zaid.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="0dp">

        <TextView
            android:text="@string/madhab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/madhabTextView"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupMadhab"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hambali"
                android:id="@+id/radioButtonHambali"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onMadhabButtonClicked"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hanafi"
                android:id="@+id/radioButtonHanafi"
                android:checked="false"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onMadhabButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chafi3i"
                android:id="@+id/radioButtonChafi3i"
                android:checked="false"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onMadhabButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maliki"
                android:id="@+id/radioButtonMaliki"
                android:checked="true"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onMadhabButtonClicked" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="0dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupGender"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radioButtonFemale"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onGenderButtonClicked"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radioButtonMale"
                android:checked="true"
                style="@style/TextAppearance.AppCompat.Large"
                android:onClick="onGenderButtonClicked" />
        </RadioGroup>

        <TextView
            android:text="@string/deceased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/genderTextView"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/radioGroupMother">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radioButtonMotherNo"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:checked="true"
                android:onClick="onMotherButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radioButtonMotherYes"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onMotherButtonClicked" />
        </RadioGroup>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/mother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motherTextView"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/radioGroupFather">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radioButtonFatherNo"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:checked="true"
                android:onClick="onFatherButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radioButtonFatherYes"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onFatherButtonClicked" />

        </RadioGroup>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/father"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fatherTextView"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/radioGroupGrandFather">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radioButtonGrandFatherNo"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:checked="true"
                android:onClick="onGrandFatherButtonClicked"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radioButtonGrandFatherYes"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onGrandFatherButtonClicked" />
        </RadioGroup>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/grand_father"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grandFatherTextView"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/radioGroupPaternalGrandMother">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radioButtonPaternalGrandMotherNo"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:checked="true"
                android:onClick="onPaternalGrandMotherButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radioButtonPaternalGrandMotherYes"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onPaternalGrandMotherButtonClicked" />
        </RadioGroup>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:text="الجدة لأب:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paternalGrandMotherTextView"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/radioGroupMaternalGrandMother"
            android:weightSum="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radioButtonMaternalGrandMotherNo"
                android:layout_gravity="center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:checked="true"
                android:onClick="onMaternalGrandMotherButtonClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radioButtonMaternalGrandMotherYes"
                android:layout_gravity="center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onMaternalGrandMotherButtonClicked" />
        </RadioGroup>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/maternal_grand_mother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maternalGrandMotherTextView"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="right">


    </LinearLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonNext1"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:onClick="onNextClicked"
        android:layout_marginLeft="91dp"
        android:layout_marginStart="91dp"
        android:background="#ffb4ffb0" />

</LinearLayout>